api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-dev
  labels:
    name: team-dev
    app: tt-stock-api
