api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tt-stock-ingress
  namespace: team-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: tt-stock-api.thisisteem.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tt-stock-api-service
            port:
              number: 80
